test/core/errors/array_types_error/zs/implicit_array_with_indexed_offsets_error.zs
package implicit_array_with_indexed_offsets_error;

struct SingleOffsetIsOk
{
    string description;
    uint32 offset;
offset:
    implicit uint32 array[];
};

struct ImplicitArrayWithOffsetsError
{
    uint32 offsets[];
offsets[@index]:
    implicit uint32 array[];
};
